# costituzione-italiana

./: .gitignore  Costituzione.md  README.md  dataset.yml  pyproject.toml
.github/workflows/: test.yml  update-da-corte.yml  update-da-italia-corpus.yml  update-indicatori-da-mapping.yml
data/: articoli.csv  articoli.parquet  atti-promovimento.csv  atti-promovimento.parquet  citazioni-legislative.parquet  indicatori-costituzionali.csv  indicatori-costituzionali.parquet  massime.parquet  revisioni.csv  revisioni.parquet
strumenti/: converti-da-wikisource.py  estrai-articoli.py  genera-indicatori-costituzionali.py  importa-citazioni-da-italia-corpus.py  importa-corte-costituzionale.py  importa-massime.py  importa-revisioni.py
tests/: test_converti.py
