[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "costituzione-italiana"
version = "0.1.0"
description = "Costituzione della Repubblica Italiana — testo strutturato in Markdown"
license = "CC-BY-SA-3.0"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=14",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = []
